# stock_quiz

./: .env.example  .gitignore  DEBUG.md  FUTURE.md  GETTING_STARTED.md  Readme.md  SETUP_CHECKLIST.md  install_requirements.bat  package.json  pyproject.toml  start_server.bat  start_server.sh
src/mcp/: server.js
src/models/: Quiz.js
src/providers/: README.md  coinGeckoProvider.js  coingecko_fetcher.py  requirements.txt  yfinanceProvider.js  yfinance_fetcher.py
src/services/: chartService.js  dataProcessor.js
src/utils/: cache.js  config.js
src/web/: server.js
src/web/public/: app.js  index.html  index.html.backup  styles.css
test/: README.md  run_all_tests.js  test_chart_service.js  test_coingecko_dummy.js  test_current_price.js  test_dummy_data.js  test_quiz_generation.js  test_yfinance_provider.js
